Make thread scope authoritative for agent scheduling
Derive trunk, task, and stage context from persisted thread scope instead of nullable identifiers. Bind task sessions explicitly, surface scheduler-backed stage execution logs, and recover shared-session turns without false scheduler conflicts.