@@ -11,31 +11,26 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package com.bytequay.app.service.stage;
+package com.bytequay.app.service.brain;
 
 import com.bytequay.app.domain.AgentMetrics;
-import com.bytequay.app.domain.AgentRun;
-import com.bytequay.app.domain.StageEventType;
 import com.bytequay.app.domain.StageInstance;
-import com.bytequay.app.domain.StageState;
 import com.bytequay.app.domain.StageType;
 import com.bytequay.app.domain.Task;
-import com.bytequay.app.domain.TaskPhase;
 import com.bytequay.app.domain.TaskStatus;
 import com.bytequay.app.domain.Thread;
 import com.bytequay.app.domain.ThreadFlow;
 import com.bytequay.app.domain.ThreadKind;
 import com.bytequay.app.domain.ThreadStatus;
 import com.bytequay.app.domain.ThreadTurn;
-import com.bytequay.app.domain.ThreadTurnStatus;
 import com.bytequay.app.domain.WorkModel;
 import com.bytequay.app.domain.WorkModelKind;
 import com.bytequay.app.repository.StageStore;
 import com.bytequay.app.repository.TaskStore;
 import com.bytequay.app.repository.ThreadStore;
 import com.bytequay.app.repository.ThreadTurnStore;
-import com.bytequay.app.service.runs.AgentRunService;
-import com.bytequay.app.service.threads.TaskAgent;
+import com.bytequay.app.service.threads.PlanKickoffRequested;
+import com.bytequay.app.service.threads.TaskBrainAgent;
 import com.bytequay.app.service.threads.ThreadRegistry;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -45,7 +40,6 @@ import org.springframework.test.context.bean.override.mockito.MockitoBean;
 
 import java.time.Instant;
 import java.util.List;
-import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.CompletableFuture;
 
@@ -56,85 +50,67 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
-/** Covers the real PlanStageService -> AgentScheduler -> AgentRunService boundary. */
+/** Covers the real BrainService -> scheduler transaction boundary. */
 @SpringBootTest
-class TestPlanApprovalSchedulerBoundary
+class TestBrainPlanKickoffBoundary
 {
     @Autowired
-    private PlanStageService plans;
-    @Autowired
-    private StageStore stages;
-    @Autowired
-    private TaskStore tasks;
+    private BrainServiceImpl brain;
     @Autowired
     private ThreadStore threads;
     @Autowired
-    private ThreadTurnStore turns;
+    private TaskStore tasks;
     @Autowired
-    private AgentRunService runs;
+    private StageStore stages;
+    @Autowired
+    private ThreadTurnStore turns;
     @MockitoBean
     private ThreadRegistry registry;
 
     @BeforeEach
-    void keepTheRealSchedulerOffExternalProviders()
+    void keepTheSchedulerOffExternalProviders()
     {
-        TaskAgent agent = mock(TaskAgent.class);
-        when(registry.resolvedWorkModelForTurn(any(), any(), any())).thenReturn(
-                new WorkModel(WorkModelKind.CLI, "claude-code", null, null));
-        when(registry.getOrCreateTaskAgent(any(), any(), anyString())).thenReturn(agent);
+        TaskBrainAgent agent = mock(TaskBrainAgent.class);
+        when(registry.resolvedWorkModelForTurn(any(), any(), anyString())).thenReturn(
+                new WorkModel(WorkModelKind.CLI, "claude-code", "claude-opus-4-8", null));
+        when(registry.getOrCreateTaskBrainAgent(any())).thenReturn(agent);
         when(agent.workingDir()).thenReturn("/tmp");
         when(agent.metrics()).thenReturn(AgentMetrics.empty());
         when(agent.send(anyString())).thenReturn(new CompletableFuture<>());
     }
 
     @Test
-    void approvalCommitsWithACorrelatedDevRunAndDurableTurn()
+    void planningKickoffCommitsTheBrainBeforeQueuingItsTaskCommand()
     {
         String taskId = seedTask();
         StageInstance plan = stages.openStage(taskId, StageType.PLAN_STAGE, null);
-        stages.recordEvent(plan.id(), taskId, StageEventType.PLAN_RECORDED, Map.of(
-                "id", "rev-boundary", "status", "finalized", "goal", "Implement it",
-                "intent", Map.of("summary", "Implement it", "steps", List.of("Change it"))));
-        stages.recordEvent(plan.id(), taskId, StageEventType.PLAN_SELF_REVIEWED, Map.of(
-                "verdict", "approved", "reviewedRevisionId", "rev-boundary"));
 
-        assertThatCode(() -> plans.approveByStage(plan.id())).doesNotThrowAnyException();
+        assertThatCode(() -> brain.onPlanKickoff(
+                new PlanKickoffRequested(taskId, "plan this", null)))
+                .doesNotThrowAnyException();
 
-        StageInstance dev = stages.findActiveStage(taskId).orElseThrow();
-        assertThat(dev.type()).isEqualTo(StageType.DEVELOPMENT_STAGE);
-        assertThat(stages.findStageById(plan.id()).orElseThrow().state())
-                .isEqualTo(StageState.CLOSED);
-        assertThat(tasks.findTaskById(taskId).orElseThrow().phase())
-                .isEqualTo(TaskPhase.IMPLEMENTING);
-
-        List<ThreadTurn> durableTurns = turns.listTurnsByExactTaskIdAndStatus(
-                taskId, ThreadTurnStatus.QUEUED, 10);
-        if (durableTurns.isEmpty()) {
-            durableTurns = turns.listTurnsByExactTaskIdAndStatus(
-                    taskId, ThreadTurnStatus.RUNNING, 10);
-        }
-        assertThat(durableTurns).hasSize(1);
-        ThreadTurn kickoff = durableTurns.get(0);
-        assertThat(kickoff.stageId()).isEqualTo(dev.id().toString());
-        assertThat(kickoff.agentRunId()).isNotBlank();
-        AgentRun run = runs.findById(kickoff.agentRunId()).orElseThrow();
-        assertThat(run.kind()).isEqualTo(AgentRun.KIND_DEV);
-        assertThat(run.stageId()).isEqualTo(dev.id().toString());
-        assertThat(run.threadId()).isEqualTo(kickoff.threadId());
+        Thread brainThread = threads.findBrainThreadByTask(taskId).orElseThrow();
+        assertThat(brainThread.parentTaskId()).isEqualTo(taskId);
+        List<ThreadTurn> durable = turns.listTurnsByTaskId(brainThread.id(), 10);
+        assertThat(durable).hasSize(1);
+        assertThat(durable.getFirst().threadId()).isEqualTo(brainThread.id());
+        assertThat(durable.getFirst().stageId()).isEqualTo(plan.id().toString());
     }
 
     private String seedTask()
     {
-        Instant now = Instant.parse("2026-07-27T03:00:00Z");
+        Instant now = Instant.parse("2026-07-27T12:00:00Z");
+        WorkModel model = new WorkModel(
+                WorkModelKind.CLI, "claude-code", "claude-opus-4-8", null);
         Thread thread = new Thread(
                 UUID.randomUUID().toString(), ThreadKind.CLI_AGENT, "claude-code",
-                null, "Plan approval boundary", ThreadStatus.RUNNING, "claude-sonnet-4.6",
+                null, "Planning boundary", ThreadStatus.RUNNING, "claude-opus-4-8",
                 0L, 0L, 0L, now, now, null, null, ThreadFlow.BUILD,
-                "ws-default", null, null);
+                "ws-default", model, null);
         threads.saveThread(thread);
         String taskId = UUID.randomUUID().toString();
         tasks.saveTask(new Task(
-                taskId, thread.id(), 1L, TaskStatus.RUNNING, "feature", null, "main", "/tmp",
+                taskId, thread.id(), 1L, TaskStatus.PENDING, "feature", null, "main", "/tmp",
                 null, null, null, null, null, "DEVELOP", null, null,
                 0L, 0L, 0L, null, now, null, null, null, null, null));
         return taskId;
